# ROS_rPBC

./: .gitignore  README.md  check_camera.bash  new_file.bash
src/panda/: CMakeLists.txt  launch_one.launch  launch_two.launch  package.xml  panda.project  panda.workspace  plugin.xml
src/panda/.codelite/: panda.session  refactoring.db
src/panda/config/: 2Dparams.yaml  elisa3_display_rviz.rviz  elisa3_single_rviz.rviz  pandaVs.yaml
src/panda/include/: Agent.h  AgentStation.h  CMM.h  ConnectedPandasim.h  Controller.h  CustomLog.h  Edge.h  EdgeDelayFree.h  EdgeDirect.h  EdgeFlex.h  EdgeFlexDelayFree.h  EdgeIntegral.h  EdgeLPF.h  EdgeLeader.h  Elisa3.h  Elisa3_Station.h  ElisaStation.h  Exceptions.h  FlexibleEdge.h  Formation.h  Goal.h  Goals.h  Helpers.h  IDAPBC.h  Obstacle.h  Panda.h  PandaSim.h  Potential.h  PotentialFactors.h  Remote.h  Remote_Node.h  Selector.h  Station.h  System.h  rPBC.h
src/panda/launch/: environment.yaml  general.launch  goals.yaml  network.yaml  panda.launch
src/panda/launch/Elisa3/: elisa3.launch  elisa3.yaml  elisa3_three.launch  elisa3_two.launch  goals.yaml  params.yaml  params_three.yaml  params_two.yaml
src/panda/launch/Elisa3/Double/: elisa3_2.yaml  elisa3_double.launch  params.yaml
src/panda/launch/Elisa3/Single/: beacon.yaml  elisa3.launch  elisa3.yaml  params.yaml
src/panda/launch/Gazebo/: gazebo_two.launch
src/panda/launch/beacon_panda/: beacon.yaml  beacon_panda.launch  goals.yaml  panda.yaml  params.yaml
src/panda/launch/beacon_panda/1D/: 1D_beacon_panda.launch  beacon.yaml  panda.yaml  params.yaml
src/panda/launch/beacon_panda/2D/: 2D_beacon_panda.launch  beacon.yaml  panda.yaml  params.yaml
src/panda/launch/beacon_panda/3D/: 3D_beacon_panda.launch  beacon.yaml  panda.yaml  params.yaml
src/panda/launch/connected_panda/: beacon.yaml  connected_panda.launch  goals.yaml  panda.yaml  params.yaml
src/panda/launch/connected_panda/1D/: 1D_connected_panda.launch  beacon.yaml  panda.yaml  params.yaml
src/panda/launch/connected_panda/2D/: 2D_connected_panda.launch  beacon.yaml  panda.yaml  params.yaml
src/panda/launch/connected_panda/3D/: 3D_connected_panda.launch  beacon.yaml  panda.yaml  params.yaml
src/panda/launch/elisa/: elisa3.yaml  goals.yaml  marker_mapping.yaml
src/panda/launch/elisa/Single/: beacon.yaml  elisa3.launch  elisa3.yaml  params.yaml
src/panda/launch/elisa/Triple/: params_three.yaml
src/panda/launch/elisa/one/: beacon.yaml  elisa3.launch  elisa3_0.yaml  params.yaml
src/panda/launch/elisa/two/: beacon.yaml  elisa3_0.yaml  elisa3_1.yaml  elisa3_two.launch  params.yaml
src/panda/launch/gazebo/: beacon.yaml  gazebo_two.launch  goals.yaml  pandasim.yaml  params.yaml
src/panda/launch/gazebo/1D/: beacon.yaml  gazebo_1D.launch  goals.yaml  pandasim.yaml  params.yaml
src/panda/launch/panda/: panda_control.launch  params.yaml
src/panda/launch/panda_elisa3/: elisa3.yaml  elisa3_0.yaml  elisa3_1.yaml  panda.yaml  panda_elisa3.launch  params.yaml
src/panda/launch/panda_elisa3/Formation/: elisa3_0.yaml  elisa3_1.yaml  formation_panda_elisa.launch  panda.yaml  params.yaml
src/panda/launch/single_panda/: panda_control.launch  params.yaml
src/panda/msg/: Move.msg  Readout.msg  Waves.msg
src/panda/scripts/: Elisa3-firmware-advanced-rev240-13.03.18.hex  check_camera.bash  connection_check.bash  flash.bash  panda_bandwidth_test.bash
src/panda/src/: Agent.cpp  Agent_Node.cpp  Beacon_Node.cpp  CMM.cpp  CustomLog.cpp  Elisa3_Node.cpp  Elisa3_Station.cpp  Helpers.cpp  NetworkNode.cpp  Remote_Node.cpp  ServerNode.cpp  TextInterface.cpp
src/panda/src/classes/: Agent.cpp  AgentStation.cpp  CMM.cpp  ConnectedPandasim.cpp  Controller.cpp  Edge.cpp  EdgeDelayFree.cpp  EdgeDirect.cpp  EdgeFlex.cpp  EdgeFlexDelayFree.cpp  EdgeIntegral.cpp  EdgeLPF.cpp  EdgeLeader.cpp  Elisa3.cpp  ElisaStation.cpp  FlexibleEdge.cpp  Formation.cpp  Goal.cpp  Goals.cpp  IDAPBC.cpp  Obstacle.cpp  Panda.cpp  PandaSim.cpp  Potential.cpp  Remote.cpp  Selector.cpp  Station.cpp  System.cpp  rPBC.cpp
src/panda/src/pc-side-elisa3-library/: Doxyfile  elisa3-lib.c  elisa3-lib.h  pc-side-elisa3-library.cbp  pc-side-elisa3-library.depend  pc-side-elisa3-library.layout  usb-comm.c  usb-comm.h
src/panda/src/pc-side-elisa3-library/linux/: Makefile
src/panda/srv/: addObstacle.srv  colorElisa3.srv  getConnectionsOf.srv  isAgentLeader.srv  registerAgent.srv  registerElisa3.srv
src/panda/urdf/: elisa3_urdf.xml
